--- a/src/components/BaiTapBookingTicket.css
+++ b/src/components/BaiTapBookingTicket.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: "fontGame";
+    font-family: "Pony";
     src: url("../assets/font/Pony.ttf");
 }
 
 .bookingMovie {
-    font-family: "fontGame";
+    font-family: "Pony";
 }
 
 .ghe {
@@ -50,7 +50,7 @@
 
     background: orange;
     color: #000;
-
+    /* no drop dùng để ngăn chặn con trỏ */
     cursor: no-drop !important;
     border-radius: 5px;
     width: 45px;
